--- a/client/app/data/appdata.json
+++ b/client/app/data/appdata.json
@@ -4278,9 +4278,9 @@
       "dv": "ރިޕޯޓެއް ފައިލް ކުރުން",
       "el": "Καταχωρήστε μια αναφορά",
       "en": "File a report",
-      "es": "KOMUNIKAZIO BERRIA",
+      "es": "NUEVA COMUNICACIÓN",
       "et": "File a report",
-      "eu": "NUEVA COMUNICACIÓN",
+      "eu": "KOMUNIKAZIO BERRIA",
       "fa": "تشکیل یک گزارش",
       "fa_AF": "ترتیب یک راپور",
       "fi": "Jätä ilmoitus",
