--- a/client/app/data/appdata.json
+++ b/client/app/data/appdata.json
@@ -4339,7 +4339,7 @@
       "zh_TW": "提交报告"
     },
     "whistleblowing_question": {
-      "en": "**New information**n,\nIf you utilize our Ethical Channel, our experts will evaluate the accuracy of the allegations and conduct all necessary investigations to address the reported violation.",
+      "en": "**New information**,\nIf you utilize our Ethical Channel, our experts will evaluate the accuracy of the allegations and conduct all necessary investigations to address the reported violation.",
       "es": "**Nueva información**\nSi utilizas nuestro Canal Ético, nuestros expertos valorarán la exactitud de las alegaciones y realizarán todas las investigaciones necesarias para resolver la infracción denunciada.",
       "eu": "**Informazio berria**\nGure Kanal Etikoa erabiltzen baduzu, gure adituek alegazioen zehaztasuna ebaluatuko dute eta salatutako arau-haustea konpontzeko beharrezko ikerketa guztiak egingo dituzte."
     }
